terminals/5.txt
---
pid: 32008
cwd: "E:\Projects\!Lux IDE"
command: "Set-Location -LiteralPath 'E:\\Projects\\!Lux IDE'; pnpm dev"
started_at: 2026-06-04T22:22:38.430Z
running_for_ms: 17555008 
---

> lux-ide@1.0.0 dev E:\Projects\!Lux IDE
> pnpm --filter @lux/desktop tauri dev


> @lux/desktop@1.0.0 tauri E:\Projects\!Lux IDE\apps\desktop
> tauri "dev"

     Running BeforeDevCommand (`pnpm dev`)

> @lux/desktop@1.0.0 dev E:\Projects\!Lux IDE\apps\desktop
> node ./scripts/kill-dev-port.mjs 5173 && node ./scripts/start-browser-preview.mjs

(node:8696) [DEP0190] DeprecationWarning: Passing args to a child process with shell option true can lead to security vulnerabilities, as the arguments are not escaped, only concatenated.
(Use `node --trace-deprecation ...` to show where the warning was created)

  VITE v8.0.14  ready in 302 ms

  ➜  Local:   http://127.0.0.1:5173/
     Running DevCommand (`cargo  run --no-default-features --color always --`)
        Info Watching E:\Projects\!Lux IDE\apps\desktop\src-tauri for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-core for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-dap for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-editor for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-extensions for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-file-intel for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-fs for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-git for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-lsp for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-search for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-settings for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-terminal for changes...
        Info Watching E:\Projects\!Lux IDE\crates\lux-workspace for changes...
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.81s
     Running `E:\Projects\!Lux IDE\target\debug\lux-desktop.exe`
        Info File E:\Projects\!Lux IDE\crates\lux-core\src\lib.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
   Compiling lux-core v0.1.0 (E:\Projects\!Lux IDE\crates\lux-core)
    Building [=======================> ] 675/689: lux-core                                                            warning: unreachable pattern
   --> crates\lux-core\src\lib.rs:674:9
    |
674 |         "drawio" | "dio" | "excalidraw" | "vsdx" => "xml",
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
    |
note: multiple earlier patterns match some of the same values
   --> crates\lux-core\src\lib.rs:674:9
    |
627 | /         "json" | "jsonc" | "json5" | "jsonl" | "ndjson" | "webmanifest" | "geojson"
628 | |         | "npmrc" | "yarnrc" | "prettierrc" | "eslintrc" | "babelrc" | "browserslistrc"
629 | |         | "excalidraw" | "dot" | "gv" => "json",
    | |_____________________________________- matches some of the same values
...
635 |           "xml" | "xsd" | "xsl" | "xslt" | "drawio" | "dio" | "vsdx" | "svg" => "xml",
    |           ------------------------------------------------------------------ matches some of the same values
...
674 |           "drawio" | "dio" | "excalidraw" | "vsdx" => "xml",
    |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ collectively making this unreachable
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

    Building [=======================> ] 675/689: lux-core                                                            warning: unreachable pattern
   --> crates\lux-core\src\lib.rs:675:9
    |
627 | /         "json" | "jsonc" | "json5" | "jsonl" | "ndjson" | "webmanifest" | "geojson"
628 | |         | "npmrc" | "yarnrc" | "prettierrc" | "eslintrc" | "babelrc" | "browserslistrc"
629 | |         | "excalidraw" | "dot" | "gv" => "json",
    | |_____________________________________- matches all the relevant values
...
675 |           "dot" | "gv" => "json",
    |           ^^^^^^^^^^^^ no value can reach this

    Building [=======================> ] 675/689: lux-core                                                               Compiling lux-terminal v0.1.0 (E:\Projects\!Lux IDE\crates\lux-terminal)
   Compiling lux-editor v0.1.0 (E:\Projects\!Lux IDE\crates\lux-editor)
   Compiling lux-workspace v0.1.0 (E:\Projects\!Lux IDE\crates\lux-workspace)
   Compiling lux-git v0.1.0 (E:\Projects\!Lux IDE\crates\lux-git)
   Compiling lux-file-intel v0.1.0 (E:\Projects\!Lux IDE\crates\lux-file-intel)
   Compiling lux-lsp v0.1.0 (E:\Projects\!Lux IDE\crates\lux-lsp)
   Compiling lux-settings v0.1.0 (E:\Projects\!Lux IDE\crates\lux-settings)
   Compiling lux-search v0.1.0 (E:\Projects\!Lux IDE\crates\lux-search)
   Compiling lux-dap v0.1.0 (E:\Projects\!Lux IDE\crates\lux-dap)
   Compiling lux-extensions v0.1.0 (E:\Projects\!Lux IDE\crates\lux-extensions)
   Compiling lux-fs v0.1.0 (E:\Projects\!Lux IDE\crates\lux-fs)
    Building [=======================> ] 675/689: lux-dap…        Info File E:\Projects\!Lux IDE\crates\lux-core\src\lib.rs changed. Rebuilding application...
     Running DevCommand (`cargo  run --no-default-features --color always --`)
   Compiling lux-core v0.1.0 (E:\Projects\!Lux IDE\crates\lux-core)
    Building [=======================> ] 675/689: lux-core                                                               Compiling lux-extensions v0.1.0 (E:\Projects\!Lux IDE\crates\lux-extensions)
   Compiling lux-settings v0.1.0 (E:\Projects\!Lux IDE\crates\lux-settings)
   Compiling lux-terminal v0.1.0 (E:\Projects\!Lux IDE\crates\lux-terminal)
   Compiling lux-lsp v0.1.0 (E:\Projects\!Lux IDE\crates\lux-lsp)
   Compiling lux-editor v0.1.0 (E:\Projects\!Lux IDE\crates\lux-editor)
   Compiling lux-file-intel v0.1.0 (E:\Projects\!Lux IDE\crates\lux-file-intel)
   Compiling lux-search v0.1.0 (E:\Projects\!Lux IDE\crates\lux-search)
   Compiling lux-dap v0.1.0 (E:\Projects\!Lux IDE\crates\lux-dap)
   Compiling lux-fs v0.1.0 (E:\Projects\!Lux IDE\crates\lux-fs)
   Compiling lux-workspace v0.1.0 (E:\Projects\!Lux IDE\crates\lux-workspace)
   Compiling lux-git v0.1.0 (E:\Projects\!Lux IDE\crates\lux-git)
    Building [=======================> ] 675/689: lux-ext…    Building [=======================> ] 676/689: lux-ext…    Building [=======================> ] 677/689: lux-ext…    Building [=======================> ] 678/689: lux-ext…    Building [=======================> ] 679/689: lux-ext…    Building [=======================> ] 680/689: lux-ext…    Building [=======================> ] 681/689: lux-ext…    Building [=======================> ] 682/689: lux-ext…                                                            error[E0004]: non-exhaustive patterns: `FileViewStrategy::TableEditor` and `FileViewStrategy::DatabaseEditor` not covered
   --> crates\lux-file-intel\src\lib.rs:97:11
    |
 97 |     match descriptor.strategy {
    |           ^^^^^^^^^^^^^^^^^^^ patterns `FileViewStrategy::TableEditor` and `FileViewStrategy::DatabaseEditor` not covered
    |
note: `FileViewStrategy` defined here
   --> crates\lux-core\src\lib.rs:198:1
    |
198 | pub enum FileViewStrategy {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^
...
204 |     TableEditor,
    |     ----------- not covered
205 |     DatabasePreview,
206 |     DatabaseEditor,
    |     -------------- not covered
    = note: the matched value is of type `FileViewStrategy`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
    |
114 ~         FileViewStrategy::ExternalOnly => Ok(external_preview(path, descriptor)),
115 ~         FileViewStrategy::TableEditor | FileViewStrategy::DatabaseEditor => todo!(),
    |

    Building [=======================> ] 682/689: lux-ext…                                                            For more information about this error, try `rustc --explain E0004`.
    Building [=======================> ] 682/689: lux-ext…                                                            error: could not compile `lux-file-intel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
    Building [=======================> ] 683/689: lux-ext…    Building [=======================> ] 684/689: lux-ext…    Building [=======================> ] 685/689: lux-ext…    Building [=======================> ] 686/689: lux-ext…                                                            E:\Projects\!Lux IDE\apps\desktop:
 ERR_PNPM_RECURSIVE_RUN_FIRST_FAIL  @lux/desktop@1.0.0 tauri: `tauri "dev"`
Exit status 101
 ELIFECYCLE  Command failed with exit code 101.
